@@ -2,7 +2,7 @@ language: perl
 sudo: false
 matrix:
   include:
-    - perl: "5.8.1"
+    - perl: "5.8.3"
     - perl: "5.26"
       env: RELEASE_TESTING=1
     # separate from release testing else cover_db blows up xt/manifest.t
