@@ -6,6 +6,7 @@ BEGIN {
   strict
   warnings
   Test::More
+  Test::Snapshot
 );
 do { eval "use $_; 1" or die $@ } for @IMPORT;
 }
